# Sonnenblume

./: CMakeLists.txt  Clouds.ui.qml  Main.qml  Sonnenstand.qml  images.qrc  main.cpp  ressources.qrc  sonne.gitignore
